# atychia

./: .atychia-launch.kate-swp  .gitignore  .kateproject.build  99-filotimo-atychia.rules  CMakeLists.txt  LICENSE  Messages.sh  README.md  atychia-interactive-su  atychia-launch.in  atychia-restart-plasmashell.in  filotimo-atychia.spec  org.filotimo.atychia-launch.policy  org.filotimo.atychia-restart-plasmashell.desktop  org.filotimo.atychia.desktop  org.filotimolinux.atychia-restart-plasmashell.desktop  org.filotimoproject.atychia-launch.policy  org.filotimoproject.atychia-restart-plasmashell.desktop  org.filotimoproject.atychia.desktop
po/: CMakeLists.txt  atychia.pot
src/: Action.cpp  Action.h  Actions.cpp  Actions.h  CMakeLists.txt  atychia-launch.in  directories.h.in  main.cpp
src/atychiad/: CMakeLists.txt  atychiad.service.in  main.cpp
src/contents/ui/: About.qml  Main.qml
